🛠 Set option for TZ