@@ -1,6 +1,8 @@
 FROM openjdk:8-jre-alpine
 MAINTAINER devcsrj
 
+RUN apk add --no-cache tzdata
+
 ARG JAR=build/libs/ispmon-MISSING.jar
 COPY $JAR /opt/ispmon.jar
 
@@ -11,11 +13,9 @@ WORKDIR /opt
 ENTRYPOINT ["java", \
 "-server", \
 "-XX:+UnlockExperimentalVMOptions", \
-"-XX:+UseCGroupMemoryLimitForHeap", \
 "-XX:InitialRAMFraction=2", \
 "-XX:MinRAMFraction=2", \
 "-XX:MaxRAMFraction=2", \
-"-XX:+UseG1GC", \
 "-XX:MaxGCPauseMillis=100", \
 "-XX:+UseStringDeduplication", \
 "-jar", \
